--- a/styleindex.css
+++ b/styleindex.css
@@ -205,3 +205,29 @@ button[type='submit']:hover, button[type='reset']:hover {
     font-weight: bold;
 }
 
+.ad-container {
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 160px; /* Tamaño estándar de anuncios laterales */
+    height: 600px;
+    background-color: #f1f1f1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border: 1px solid #ccc;
+}
+
+.ad-left {
+    left: 10px;
+}
+
+.ad-right {
+    right: 10px;
+}
+
+.ad-container img {
+    max-width: 100%;
+    max-height: 100%;
+}
