--- a/styleindex.css
+++ b/styleindex.css
@@ -209,14 +209,16 @@ button[type='submit']:hover, button[type='reset']:hover {
     position: fixed;
     top: 50%;
     transform: translateY(-50%);
-    width: 160px; /* Tamaño estándar de anuncios laterales */
-    height: 600px;
     background-color: #f1f1f1;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
     border: 1px solid #ccc;
+    z-index: -1;
+    width: 200px;
+    padding: 10px; /* Add padding to give some space around the image */
 }
 
 .ad-left {
@@ -229,5 +231,24 @@ button[type='submit']:hover, button[type='reset']:hover {
 
 .ad-container img {
     max-width: 100%;
-    max-height: 100%;
+    height: auto; /* Maintain aspect ratio */
+}
+
+.ad-container p {
+    margin: 10px 0;
+    font-size: 16px;
+    font-weight: bold;
+    color: #333;
+}
+
+.ad-container a {
+    display: block;
+    margin-top: 10px;
+    color: #CC0000;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.ad-container a:hover {
+    text-decoration: underline;
 }
