--- a/styleindex.css
+++ b/styleindex.css
@@ -252,3 +252,10 @@ button[type='submit']:hover, button[type='reset']:hover {
 .ad-container a:hover {
     text-decoration: underline;
 }
+
+footer {
+    background-color: #CC0000;
+    padding: 20px;
+    text-align: center;
+    color: white;
+}
