--- a/styleindex.css
+++ b/styleindex.css
@@ -266,3 +266,37 @@ footer {
     height: auto;
     border-radius: 5px;
 }
+
+#game-container {
+    margin-top: 20px;
+    background: white;
+    padding: 20px;
+    display: inline-block;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    filter: blur(8px);
+    border-radius: 10px;
+}
+
+input, button {
+    margin-top: 10px;
+    padding: 10px;
+    font-size: 16px;
+}
+
+button {
+    background-color: #d31a38;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #b1152e;
+}
